# m3u8-flow

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md
.github/workflows/: docker-image.yml
backend/: .gitignore  pyproject.toml
backend/app/: main.py  models.py  static_serving.py
backend/app/api/: deps.py  main.py
backend/app/api/routes/: auth.py  global_config.py  tasks.py
backend/app/core/: config.py  db.py  exceptions.py
backend/app/interfaces/: downloader.py  merge_parser.py  task.py
backend/app/migrations/: 0001_initial.py
backend/app/schemas/: auth.py  global_config.py  response.py  tasks.py
backend/app/schemas/services/: downloader.py  task.py
backend/app/services/: downloader.py  merge_parser.py  speed_monitor.py  task_manager.py
backend/app/utils/: filters.py  http_retries.py  jwt.py  path_safety.py
backend/tests/: conftest.py  test_db.py  test_downloader_schema.py  test_path_safety.py
backend/tests/api/: test_auth.py  test_global_config.py  test_tasks.py  test_tasks_path_validation.py
frontend/: .oxlintrc.json  README.md  components.d.ts  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue  components.d.ts  main.ts
frontend/src/components/: CreateTaskDialog.vue  DownloadItem.vue  EditTaskDialog.vue  HeadersEditor.vue  TaskInfoDialog.vue  ToastHost.vue
frontend/src/router/: index.ts
frontend/src/stores/: auth.ts
frontend/src/types/: api.ts  models.ts
frontend/src/utils/: formValidate.ts  http.ts  toast.ts
frontend/src/views/: BaseView.vue  CompletedView.vue  DownloadView.vue  GlobalConfig.vue  Login.vue
(+23 files in other folders)
